--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="nav_sanpham">Sản phẩm</string>
     <string name="nav_product">Sản phẩm</string>
     <string name="nav_service">Dịch vụ</string>
+    <string name="nav_account">Tài khoản</string>
+    <string name="nav_setting">Tùy chỉnh</string>
     <string name="test">Artifacts within the androidx namespace comprise the Android Jetpack libraries. Like the Support Library, libraries in theandroidx namespace ship separately from the Android platform and provide backward compatibility across Android releases.
 
 AndroidX is a major improvement to the original Android Support Library, which is no longer maintained. androidx packages fully replace the Support Library by providing feature parity and new libraries.
