--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CÁI NÀY LÀ APP CỦA HONDA NHA</string>
+    <string name="app_name">Honda</string>
     <string name="nav_home">Trang chủ</string>
     <string name="nav_suachua">Sửa chữa</string>
     <string name="nav_sanpham">Sản phẩm</string>
